--- a/public/index.html
+++ b/public/index.html
@@ -241,7 +241,7 @@
                 </div>
                 <div class="photo-card landscape-card card-right">
                     <img src="public/us4.jpeg" alt="Memory 4">
-                    <div class="caption">"You & Me."</div>
+                    <div class="caption">"You & Another you."</div>
                 </div>
             </div>
 
