major public removal

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         
         <div class="hero">
             <h1>Happy Rose Day<br>Priyasha! 🌹</h1>
-            <img src="public/bouquet.jpg" alt="Rose Bouquet" class="main-img">
+            <img src="bouquet.jpg" alt="Rose Bouquet" class="main-img">
             <p>You deserve all the flowers in the world.</p>
             <p class="scroll-hint">Scroll down for more ↓</p>
         </div>
@@ -225,33 +225,33 @@
             
             <div class="photo-pair">
                 <div class="photo-card landscape-card card-left">
-                    <img src="public/us1.jpeg" alt="Memory 1">
+                    <img src="us1.jpeg" alt="Memory 1">
                     <div class="caption">"MY ROSE FOREVER."</div>
                 </div>
                 <div class="photo-card landscape-card card-right">
-                    <img src="public/us2.jpeg" alt="Memory 2">
+                    <img src="us2.jpeg" alt="Memory 2">
                     <div class="caption">"My favorite view."</div>
                 </div>
             </div>
 
             <div class="photo-pair">
                 <div class="photo-card landscape-card card-left">
-                    <img src="public/us3.jpeg" alt="Memory 3">
+                    <img src="us3.jpeg" alt="Memory 3">
                     <div class="caption">"Moments like these."</div>
                 </div>
                 <div class="photo-card landscape-card card-right">
-                    <img src="public/us4.jpeg" alt="Memory 4">
+                    <img src="us4.jpeg" alt="Memory 4">
                     <div class="caption">"You & Another you."</div>
                 </div>
             </div>
 
             <div class="photo-pair">
                 <div class="photo-card portrait-card card-left">
-                    <img src="public/us5.jpeg" alt="Memory 5">
+                    <img src="us5.jpeg" alt="Memory 5">
                     <div class="caption">"Forever my rose."</div>
                 </div>
                 <div class="photo-card landscape-card card-right">
-                    <img src="public/us6.jpeg" alt="Memory 6">
+                    <img src="us6.jpeg" alt="Memory 6">
                     <div class="caption">"My heart is yours."</div>
                 </div>
             </div>
