--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 
         /* --- GALLERY STYLES --- */
         .gallery {
-            margin-top: 50px;
+            /* INCREASED SPACE HERE */
+            margin-top: 150px; 
             display: flex;
             flex-direction: column;
             gap: 120px; /* Big gap between pairs */
@@ -174,7 +175,8 @@
 
         /* POEM SECTION */
         .poem-card {
-            margin-top: 50px;
+            /* INCREASED SPACE HERE */
+            margin-top: 150px;
             margin-bottom: 100px;
             background: linear-gradient(145deg, #1a0b10, #2d0f15);
             padding: 40px 20px;
@@ -258,7 +260,7 @@
 
         </div>
 
-<div class="poem-card">
+        <div class="poem-card">
             <div class="poem-text">
                 I gave the rose a warning,<br>
                 a warning that felt silly, yet true.<br>
