--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@
 
         /* --- GALLERY STYLES --- */
         .gallery {
-            margin-top: 150px; 
+            margin-top: 200px; 
             display: flex;
             flex-direction: column;
-            /* CHANGE 1: HUGE GAP (was 200px, now 400px) */
-            gap: 400px; 
-            padding-bottom: 100px;
+            /* CHANGE 1: MASSIVE GAP (600px) */
+            gap: 600px; 
+            padding-bottom: 200px;
         }
 
         .photo-pair {
             position: relative;
-            /* CHANGE 2: TALLER BOX (was 750px, now 900px) */
-            height: 900px; 
+            /* CHANGE 2: EXTRA TALL BOX (1000px) */
+            height: 1000px; 
             opacity: 0;
             transform: translateY(50px);
             transition: all 0.8s ease;
@@ -153,8 +153,8 @@
 
         .card-right {
             right: 5%;
-            /* CHANGE 3: Pushed lower (was 250px, now 300px) */
-            top: 300px; 
+            /* CHANGE 3: Pushed way down (400px) */
+            top: 400px; 
             transform: rotate(4deg);
             z-index: 2;
         }
